# mask

./: .gitignore  .mask_audit.db  LICENSE  README.md  desktop.ini  pyproject.toml
examples/: server.py  test_agent.py
examples/secure_vault/: __init__.py  email_tool.py  vault_agent.py
mask/: __init__.py  client.py
mask/core/: __init__.py  crypto.py  fpe.py  key_provider.py  scanner.py  utils.py  vault.py
mask/integrations/: __init__.py  adk_hooks.py  langchain_hooks.py  llamaindex_hooks.py
mask/telemetry/: __init__.py  audit_logger.py
tests/: conftest.py  test_async.py  test_audit_logger.py  test_fpe.py  test_hooks.py  test_key_provider.py  test_langchain.py  test_llamaindex.py  test_substring.py  test_vault.py  test_vault_backends.py
